--- a/GiftiGather/Targets/GiftiGather/Resources/ja.lproj/Localizable.strings
+++ b/GiftiGather/Targets/GiftiGather/Resources/ja.lproj/Localizable.strings
@@ -6,5 +6,10 @@
   
 */
 
+//MARK: - Basic
 "Home" = "ホーム";
+"add" = "追加";
+"gifticon" = "モバイルギフト";
+
+//MARK: - Toast
 "mas_add_image" = "追加する画像を選択してください!";
