[Feat] 이미지 선택 이벤트 추가

--- a/GiftiGather/Targets/GiftiGather/Resources/en.lproj/Localizable.strings
+++ b/GiftiGather/Targets/GiftiGather/Resources/en.lproj/Localizable.strings
@@ -9,6 +9,12 @@
 "Home" = "Home";
 "add" = "add";
 "gifticon" = "Digital gifts";
+"cancel" = "cancel";
+"noData" = "There are no Digital gifts added yet🥲 Please add gifticons!";
+
+//MARK: - Alert
+"gifticon_auto_add" = "Automatically add digital gifts";
+"gifticon_directly_add" = "Add digital gifts directly";
 
 //MARK: - Toast
 "mas_add_image" = "Please select an image to add!";
