--- a/GiftiGather/Targets/GiftiGather/Resources/ja.lproj/Localizable.strings
+++ b/GiftiGather/Targets/GiftiGather/Resources/ja.lproj/Localizable.strings
@@ -10,6 +10,12 @@
 "Home" = "ホーム";
 "add" = "追加";
 "gifticon" = "モバイルギフト";
+"cancel" = "キャンセル";
+"noData" = "まだ追加されたモバイルギフトがありません🥲ギフティコンを追加してください!";
+
+//MARK: - Alert
+"gifticon_auto_add" = "モバイルギフト直接追加";
+"gifticon_directly_add" = "モバイルギフト自動追加";
 
 //MARK: - Toast
 "mas_add_image" = "追加する画像を選択してください!";
