--- a/GiftiGather/Targets/GiftiGather/Resources/ja.lproj/Localizable.strings
+++ b/GiftiGather/Targets/GiftiGather/Resources/ja.lproj/Localizable.strings
@@ -8,7 +8,9 @@
 
 //MARK: - Basic
 "Home" = "ホーム";
+"filter" = "フィルタ";
 "add" = "追加";
+"delete" = "消去";
 "gifticon" = "モバイルギフト";
 "cancel" = "キャンセル";
 "noData" = "まだ追加されたモバイルギフトがありません🥲ギフティコンを追加してください!";
