--- a/GiftiGather/Targets/GiftiGather/Resources/ko.lproj/Localizable.strings
+++ b/GiftiGather/Targets/GiftiGather/Resources/ko.lproj/Localizable.strings
@@ -8,7 +8,9 @@
 
 //MARK: - Basic
 "Home" = "홈";
+"filter" = "필터";
 "add" = "추가";
+"delete" = "삭제";
 "gifticon" = "기프티콘";
 "cancel" = "취소";
 "noData" = "아직 추가된 기프티콘이 없어요🥲 기프티콘을 추가해주세요!";
