--- a/GiftiGather/Targets/GiftiGather/Resources/ja.lproj/Localizable.strings
+++ b/GiftiGather/Targets/GiftiGather/Resources/ja.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "gifticon" = "モバイルギフト";
 "cancel" = "キャンセル";
 "noData" = "まだ追加されたモバイルギフトがありません🥲ギフティコンを追加してください!";
+"noFilter" = "まだ追加されたフィルターがありません。🥲右上のボタンをクリックしてフィルターを追加してください！";
 
 //MARK: - Alert
 "gifticon_auto_add" = "モバイルギフト直接追加";
