--- a/GiftiGather/Targets/GiftiGather/Resources/ko.lproj/Localizable.strings
+++ b/GiftiGather/Targets/GiftiGather/Resources/ko.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "gifticon" = "기프티콘";
 "cancel" = "취소";
 "noData" = "아직 추가된 기프티콘이 없어요🥲 기프티콘을 추가해주세요!";
+"noFilter" = "아직 추가된 필터가 없어요🥲 오른쪽 상단 버튼을 클릭해 필터를 추가해주세요!";
 
 //MARK: - Alert
 "gifticon_auto_add" = "기프티콘 자동 추가";
