--- a/GiftiGather/Targets/GiftiGather/Resources/ja.lproj/Localizable.strings
+++ b/GiftiGather/Targets/GiftiGather/Resources/ja.lproj/Localizable.strings
@@ -13,12 +13,15 @@
 "delete" = "消去";
 "gifticon" = "モバイルギフト";
 "cancel" = "キャンセル";
+"confirm" = "確認";
 "noData" = "まだ追加されたモバイルギフトがありません🥲ギフティコンを追加してください!";
 "noFilter" = "まだ追加されたフィルターがありません。🥲右上のボタンをクリックしてフィルターを追加してください！";
 
 //MARK: - Alert
 "gifticon_auto_add" = "モバイルギフト直接追加";
 "gifticon_directly_add" = "モバイルギフト自動追加";
+"gifticon_input_filter" = "追加するフィルターを入力してください。";
 
 //MARK: - Toast
 "mas_add_image" = "追加する画像を選択してください!";
+"msg_already_filter" = "すでに追加されたフィルターです。";
