--- a/GiftiGather/Targets/GiftiGather/Resources/en.lproj/Localizable.strings
+++ b/GiftiGather/Targets/GiftiGather/Resources/en.lproj/Localizable.strings
@@ -9,7 +9,7 @@
 "Home" = "Home";
 "filter" = "Filter";
 "add" = "add";
-"delete" = "delete";
+"delete" = "remove";
 "gifticon" = "Digital gifts";
 "cancel" = "cancel";
 "confirm" = "confirm";
